
* List of recently opened files is now provided in File menu

* Added table formating to popup menu of multiline text controls.
  This works for HTML and REST renderers
  
* Added Indent/Unindent command to popup menu of multiline text controls.  


Changes
~~~~~~~
* Toolbar button for glossary entries replaces 'Add' button 
  below the glossary list view 
  
* HTML export now makes XHTML



===============================
AFMS Release 0.4.0 (2008-08-10)
===============================

New features
~~~~~~~~~~~~
* Artefact database may now be archived as XML files and these XML archives 
  may be converted to databases again.
  This may be done from within afeditor or using the
  standalone scripts afarchivetodb.py and afdbtoarchive.py.
  
* Multiline text strings starting with '.. HTML' followd by a blank line 
  are now rendered as HTML. 
  
* Multiline text controls now have a popup menu offering simple text formatting 
  commands. This works for HTML and REST renderers
  
* Relations between requirements are supported now.


Changes
~~~~~~~
* When deleting or restoring an artefact a message box now 
  appears to enter a changelog message.
  
* When editing artefacts most of multiline text controls are now using monospaced font.
  This makes editing restructured text (REST) easier. 
  
  
Bug fixes
~~~~~~~~~  
* Fixed bug 2000163: language resource files now come along with Win32 binaries

* Required files template.txt and html4css1.css are now in the source distribution


===============================
AFMS Release 0.3.0 (2008-06-21)
===============================

New features
~~~~~~~~~~~~
* Win32 binaries are now available, thanks to py2exe

* New artefact type 'Text sections' for plain text sections

* New artefact type 'Glossary entry' to support a glossary

* afexporthtml.py: added command line option '-l', 
  '--language' to set output language

* English language is now supported using message catalog 
  locale/en/LC_MESSAGES/afms.po 


Changes